Update AuditAspectIntegrationTest.java